--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
     <footer class="app-footer">
         <p>Desenvolvido para disciplina de Web Design - 2026</p>
+        <p>Por Jennifer Domingos e Heloísa Lacerda</p>
     </footer>
 
     <script src="server.js"></script>
